--- a/sanjeevani-dashboard/package.json
+++ b/sanjeevani-dashboard/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://TANMAY-0306.github.io/sanjeevani-dashboard",
+
   "name": "sanjeevani-dashboard",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19"
   }
